[gd_scene load_steps=14 format=3 uid="uid://bevrq14voxgdi"]

[ext_resource type="Script" uid="uid://dilto30o4ij66" path="res://Scripts/shop.gd" id="1_fdj0q"]
[ext_resource type="Script" uid="uid://ceatpya8csule" path="res://Scripts/upgrade_data.gd" id="2_k6jq0"]
[ext_resource type="Resource" uid="uid://ds2ij55yopx6t" path="res://Scripts/Resources/ItemData/boots_commun.tres" id="3_3ps1r"]
[ext_resource type="Resource" uid="uid://6amo8rdbcgme" path="res://Scripts/Resources/ItemData/health_necklace_commun.tres" id="4_3ps1r"]
[ext_resource type="Resource" uid="uid://d4ccryp050cl8" path="res://Scripts/Resources/ItemData/boots_rare.tres" id="4_tyrku"]
[ext_resource type="Texture2D" uid="uid://fwurp47bgqcb" path="res://Assets/coin.png" id="4_ymrm4"]
[ext_resource type="Resource" uid="uid://ctsuxl0ehcmxo" path="res://Scripts/Resources/ItemData/boots_epic.tres" id="5_5xp22"]
[ext_resource type="PackedScene" uid="uid://c7jqxbr2j6tsi" path="res://Scenes/shop_item.tscn" id="5_k6jq0"]
[ext_resource type="Resource" uid="uid://d0uyy4sys06d4" path="res://Scripts/Resources/ItemData/boots_leg.tres" id="6_ow1eo"]
[ext_resource type="Resource" uid="uid://dsjmvsukwy7ss" path="res://Scripts/Resources/ItemData/health_necklace_rare.tres" id="8_k6pkm"]
[ext_resource type="Resource" uid="uid://beh0vck5chg66" path="res://Scripts/Resources/ItemData/health_necklace_epic.tres" id="9_1sjcd"]
[ext_resource type="Resource" uid="uid://c6l1l8rcjskef" path="res://Scripts/Resources/ItemData/health_necklace_leg.tres" id="10_1cyt5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0c07c"]
bg_color = Color(0.16206557, 0.1620656, 0.16206548, 1)

[node name="Shop" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdj0q")
possible_upgrades = Array[ExtResource("2_k6jq0")]([ExtResource("3_3ps1r"), ExtResource("4_tyrku"), ExtResource("5_5xp22"), ExtResource("6_ow1eo"), ExtResource("4_3ps1r"), ExtResource("8_k6pkm"), ExtResource("9_1sjcd"), ExtResource("10_1cyt5")])

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0c07c")

[node name="Header" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 13.0
offset_bottom = 58.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/Header"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 32
text = "Shop wave 1"

[node name="Gold" type="HBoxContainer" parent="Panel/Header"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="GoldIcon" type="TextureRect" parent="Panel/Header/Gold"]
layout_mode = 2
texture = ExtResource("4_ymrm4")
expand_mode = 2

[node name="GoldLabel" type="Label" parent="Panel/Header/Gold"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "135"

[node name="GridContainer" type="GridContainer" parent="Panel"]
layout_direction = 2
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 13.0
offset_top = -106.0
offset_right = 13.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2
columns = 5

[node name="ShopItem" parent="Panel/GridContainer" instance=ExtResource("5_k6jq0")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShopItem2" parent="Panel/GridContainer" instance=ExtResource("5_k6jq0")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShopItem3" parent="Panel/GridContainer" instance=ExtResource("5_k6jq0")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShopItem4" parent="Panel/GridContainer" instance=ExtResource("5_k6jq0")]
layout_mode = 2
size_flags_horizontal = 3

[node name="ShopItem5" parent="Panel/GridContainer" instance=ExtResource("5_k6jq0")]
layout_mode = 2
size_flags_horizontal = 3

[node name="Footer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
offset_bottom = -69.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50

[node name="RerollButton" type="Button" parent="Panel/Footer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
text = "Reroll"

[node name="NextWaveButton" type="Button" parent="Panel/Footer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 5
text = "Nex wave"

[connection signal="pressed" from="Panel/Footer/RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="pressed" from="Panel/Footer/NextWaveButton" to="." method="_on_next_wave_button_pressed"]
